Bibliography reviewed and solved.

--- a/report/references.bib
+++ b/report/references.bib
@@ -1,5 +1,6 @@
+% Books and InBooks
 @book{Courant1953,
-  author    = {R. Courant and D. Hilbert},
+  author    = {Courant, R. and Hilbert, D.},
   title     = {Methods of Mathematical Physics},
   volume    = {I},
   publisher = {John Wiley \& Sons},
@@ -9,7 +10,7 @@
 }
 
 @inbook{Kirk2004,
-  author    = {E. D. Kirk},
+  author    = {Kirk, E. D.},
   title     = {Optimal Control Theory: An Introduction},
   chapter   = {1},
   pages     = {3--28},
@@ -19,25 +20,8 @@
   isbn      = {0-486-43484-2}
 }
 
-@electronic{Blasjo2021,
-  author    = {V. Bl{\aa}sj{\"o}},
-  title     = {Galileo, ignoramus: Mathematics versus philosophy in the scientific revolution},
-  year      = {2021},
-  url       = {https://doi.org/10.48550/arXiv.2102.06595},
-  note      = {arXiv:2102.06595 [math.HO]}
-}
-
-@article{Bernoulli1696,
-  author    = {J. Bernoulli},
-  title     = {Problema novum ad ejus solutionem {M}athematica invitantur},
-  journal   = {Acta Eruditorum},
-  year      = {1696},
-  pages     = {269},
-  note      = {18th ed.}
-}
-
 @inbook{Betts2010,
-  author    = {J. T. Betts},
+  author    = {Betts, J. T.},
   title     = {Practical Methods for Optimal Control and Estimation Using Nonlinear Programming},
   edition   = {2nd},
   chapter   = {4},
@@ -48,111 +32,16 @@
   isbn      = {978-0-89871-688-7}
 }
 
-@electronic{IllinoisRobotics,
-  author    = {{Illinois Robotics Systems}},
-  title     = {Section {IV}: Dynamics and Control},
-  booktitle = {Chapter 17: Optimal Control (Section 1)},
-  organization = {Intelligent Motion Lab},
-  url       = {https://motion.cs.illinois.edu/RoboticSystems/Book.html},
-  note      = {Accessed Dec. 23, 2025}
-}
-
 @book{BrysonHo1975,
-  author    = {A. E. Bryson and Y. C. Ho},
+  author    = {Bryson, A. E. and Ho, Y. C.},
   title     = {Applied Optimal Control: Optimization, Estimation, and Control},
   publisher = {Hemisphere Publishing Corp},
   year      = {1975},
   address   = {Washington, DC, USA}
 }
 
-@inbook{Bohme2017,
-  author    = {J. T. B{\"o}hme and B. Frank},
-  title     = {Hybrid Systems, Optimal Control and Hybrid Vehicles: Theory, Methods and Applications},
-  edition   = {1st},
-  chapter   = {8},
-  pages     = {245--247},
-  publisher = {Springer},
-  year      = {2017},
-  address   = {Cham, Switzerland},
-  isbn      = {978-3-319-51316-4}
-}
-
-@unpublished{Jackson2018,
-  author    = {B. Jackson},
-  title     = {Exploring quadrature rules in direct collocation methods for trajectory optimization},
-  note      = {Principles of optimal control (AA203). Accessed Dec. 23, 2025},
-  year      = {2018},
-  url       = {https://bjack205.github.io/assets/AA203_project.pdf}
-}
-
-@incollection{Becerra2012,
-  author    = {V. M. Becerra},
-  title     = {Practical Direct Collocation Methods for Computational Optimal Control},
-  booktitle = {Modeling and Optimization in Space Engineering},
-  editor    = {G. Fasano and J. D. Pint{\'e}r},
-  publisher = {Springer},
-  year      = {2012},
-  pages     = {33--60},
-  doi       = {10.1007/978-1-4614-4469-5_2}
-}
-
-@article{Stryk1992,
-  author    = {O. von Stryk and R. Bulirsch},
-  title     = {Direct and indirect methods for trajectory optimization},
-  journal   = {Ann. Oper. Res.},
-  volume    = {37},
-  number    = {1--4},
-  pages     = {357--373},
-  year      = {1992},
-  doi       = {10.1007/BF02071065}
-}
-
-@incollection{Leonard1992,
-  author    = {D. L{\'e}onard and N. van Long},
-  title     = {Endpoint constraints and transversality conditions},
-  booktitle = {Optimal Control Theory and Static Optimization in Economics},
-  pages     = {221--262},
-  publisher = {Cambridge Univ. Press},
-  year      = {1992},
-  address   = {Cambridge, UK}
-}
-
-@misc{Chachuat2009,
-  author    = {B. Chachuat},
-  title     = {Optimal Control: Lecture 28—{I}ndirect solution methods},
-  howpublished = {PowerPoint slides, Dept. Chem. Eng., McMaster Univ.},
-  year      = {2009},
-  note      = {Accessed Dec. 23, 2025},
-  url       = {https://www.epfl.ch/labs/la/wp-content/uploads/2018/08/Slides28.pdf}
-}
-
-@electronic{UCLCalcVar,
-  author    = {{University College London}},
-  title     = {The {Euler-Lagrange} Equation, or {Euler’s} Equation},
-  url       = {https://www.ucl.ac.uk/~ucahmto/latex_html/chapter2_latex2html/node5.html},
-  note      = {Accessed Dec. 23, 2025}
-}
-
-@misc{GordonTibshirani,
-  author    = {G. Gordon and R. Tibshirani},
-  title     = {{Karush-Kuhn-Tucker} conditions},
-  howpublished = {PowerPoint slides, School of Comput. Sci., Carnegie Mellon Univ.},
-  note      = {Accessed Dec. 23, 2025},
-  url       = {http://www.cs.cmu.edu/~ggordon/10725-F12/slides/}
-}
-
-@techreport{ColumbiaPMP,
-  author    = {{Columbia University}},
-  title     = {10. {Pontryagin’s} Minimum Principle},
-  institution = {Columbia Univ.},
-  type        = {Lecture Notes},
-  year        = {2018},
-  note        = {Accessed Dec. 23, 2025},
-  url         = {https://blogs.cuit.columbia.edu/zp2130/files/2019/03/Lecture10_Pontryagins-Minimum-Principle.pdf}
-}
-
 @inbook{BrysonHo1975_Blaisdell,
-  author    = {A. E. Bryson and Y. C. Ho},
+  author    = {Bryson, A. E. and Ho, Y. C.},
   title     = {Applied Optimal Control: Optimization, Estimation and Control},
   pages     = {1--39},
   publisher = {Blaisdell},
@@ -161,33 +50,16 @@
   isbn      = {0-89116-228-3}
 }
 
-@techreport{Waechter2004,
-  author      = {A. W{\"a}chter and L. T. Biegler},
-  title       = {On the Implementation of an Interior-Point Filter Line-Search Algorithm for Large-Scale Nonlinear Programming},
-  institution = {Optimization Online},
-  year        = {2004},
-  url         = {https://optimization-online.org/wp-content/uploads/2004/03/836.pdf},
-  note        = {Accessed Dec. 23, 2025}
-}
-
-@article{Fletcher2002,
-  author    = {R. Fletcher and S. Leyffer},
-  title     = {Nonlinear programming without a penalty function},
-  journal   = {Math. Program.},
-  volume    = {91},
-  number    = {2},
-  pages     = {239--269},
-  year      = {2002},
-  doi       = {10.1007/s101070100244}
-}
-
-@Article{Andersson2018,
-  Author = {Joel A E Andersson and Joris Gillis and Greg Horn
-            and James B Rawlings and Moritz Diehl},
-  Title = {{CasADi} -- {A} software framework for nonlinear optimization
-           and optimal control},
-  Journal = {Mathematical Programming Computation},
-  Year = {2018},
+@inbook{Bohme2017,
+  author    = {B{\"o}hme, J. T. and Frank, B.},
+  title     = {Hybrid Systems, Optimal Control and Hybrid Vehicles: Theory, Methods and Applications},
+  edition   = {1st},
+  chapter   = {8},
+  pages     = {245--247},
+  publisher = {Springer},
+  year      = {2017},
+  address   = {Cham, Switzerland},
+  isbn      = {978-3-319-51316-4}
 }
 
 @book{stengel1994optimal,
@@ -199,135 +71,260 @@
   isbn      = {978-0486682006}
 }
 
-@misc{FAOFireStats2023,
-  author       = {{Food and Agriculture Organization of the United Nations}},
-  title        = {Global Forest Fire Assessment 2023},
-  year         = {2023},
-  url          = {https://www.fao.org/forest-resources-assessment/fire/en/},
-  note         = {Accessed: Jan. 2, 2026}
+% Articles and Journals
+@article{Bernoulli1696,
+  author    = {Bernoulli, J.},
+  title     = {Problema novum ad ejus solutionem {M}athematica invitantur},
+  journal   = {Acta Eruditorum},
+  year      = {1696},
+  pages     = {269},
+  note      = {18th ed.}
+}
+
+@incollection{Becerra2012,
+  author    = {Becerra, V. M.},
+  title     = {Practical Direct Collocation Methods for Computational Optimal Control},
+  booktitle = {Modeling and Optimization in Space Engineering},
+  editor    = {Fasano, G. and Pint{\'e}r, J. D.},
+  publisher = {Springer},
+  year      = {2012},
+  pages     = {33--60},
+  doi       = {10.1007/978-1-4614-4469-5_2}
+}
+
+@article{Stryk1992,
+  author    = {von Stryk, O. and Bulirsch, R.},
+  title     = {Direct and indirect methods for trajectory optimization},
+  journal   = {Ann. Oper. Res.},
+  volume    = {37},
+  number    = {1--4},
+  pages     = {357--373},
+  year      = {1992},
+  doi       = {10.1007/BF02071065}
+}
+
+@incollection{Leonard1992,
+  author    = {L{\'e}onard, D. and van Long, N.},
+  title     = {Endpoint constraints and transversality conditions},
+  booktitle = {Optimal Control Theory and Static Optimization in Economics},
+  pages     = {221--262},
+  publisher = {Cambridge Univ. Press},
+  year      = {1992},
+  address   = {Cambridge, UK}
+}
+
+@article{Fletcher2002,
+  author    = {Fletcher, R. and Leyffer, S.},
+  title     = {Nonlinear programming without a penalty function},
+  journal   = {Math. Program.},
+  volume    = {91},
+  number    = {2},
+  pages     = {239--269},
+  year      = {2002},
+  doi       = {10.1007/s101070100244}
+}
+
+@article{Andersson2018,
+  author    = {Andersson, Joel A. E. and Gillis, Joris and Horn, Greg and Rawlings, James B. and Diehl, Moritz},
+  title     = {{CasADi} -- {A} software framework for nonlinear optimization and optimal control},
+  journal   = {Mathematical Programming Computation},
+  year      = {2018},
+  volume    = {11},
+  pages     = {1--36},
+  doi       = {10.1007/s12532-018-0139-4}
 }
 
 @article{UAVFireSuppression2022,
-  author       = {Restas, Agoston},
-  title        = {Drone Applications for Wildfire Management: From Detection to Suppression},
-  journal      = {Fire Technology},
-  year         = {2022},
-  volume       = {58},
-  number       = {3},
-  pages        = {1011--1036},
-  doi          = {10.1007/s10694-021-01169-9}
+  author    = {Restas, Agoston},
+  title     = {Drone Applications for Wildfire Management: From Detection to Suppression},
+  journal   = {Fire Technology},
+  year      = {2022},
+  volume    = {58},
+  number    = {3},
+  pages     = {1011--1036},
+  doi       = {10.1007/s10694-021-01169-9}
 }
 
-@misc{SingularWeb,
-  author       = {{Singular Aircraft S.L.}},
-  title        = {Flyox I -- The World's Largest Civilian {UAV}},
-  url          = {https://singularaircraft.com/},
-  note         = {Accessed: Jan. 2, 2026}
+@article{houska2011acado,
+  author    = {Houska, B. and Ferreau, H. J. and Diehl, M.},
+  title     = {{ACADO} Toolkit: An Open Source Framework for Automatic Control and Dynamic Optimization},
+  journal   = {Optimal Control Applications and Methods},
+  volume    = {32},
+  number    = {3},
+  pages     = {298--312},
+  year      = {2011},
+  doi       = {10.1002/oca.939}
+}
+
+@article{sun2020openap,
+  author    = {Sun, J. and Ellerbroek, J. and Hoekstra, J.},
+  title     = {{OpenAP}: An Open-source Aircraft Performance Model in Python},
+  journal   = {Aerospace},
+  volume    = {7},
+  number    = {8},
+  pages     = {104},
+  year      = {2020},
+  doi       = {10.3390/aerospace7080104}
+}
+
+% Online, Tech Reports, and Unpublished
+@online{Blasjo2021,
+  author    = {Bl{\aa}sj{\"o}, V.},
+  title     = {Galileo, ignoramus: Mathematics versus philosophy in the scientific revolution},
+  year      = {2021},
+  url       = {https://doi.org/10.48550/arXiv.2102.06595},
+  note      = {arXiv:2102.06595 [math.HO]},
+  urldate   = {2025-12-23}
+}
+
+@online{IllinoisRobotics,
+  author       = {{Illinois Robotics Systems}},
+  title        = {Section {IV}: Dynamics and Control},
+  booktitle    = {Chapter 17: Optimal Control (Section 1)},
+  organization = {Intelligent Motion Lab},
+  url          = {https://motion.cs.illinois.edu/RoboticSystems/Book.html},
+  urldate      = {2025-12-23}
+}
+
+@unpublished{Jackson2018,
+  author    = {Jackson, B.},
+  title     = {Exploring quadrature rules in direct collocation methods for trajectory optimization},
+  note      = {Principles of optimal control (AA203)},
+  year      = {2018},
+  url       = {https://bjack205.github.io/assets/AA203_project.pdf},
+  urldate   = {2025-12-23}
+}
+
+@misc{Chachuat2009,
+  author       = {Chachuat, B.},
+  title        = {Optimal Control: Lecture 28—{I}ndirect solution methods},
+  howpublished = {PowerPoint slides, Dept. Chem. Eng., McMaster Univ.},
+  year         = {2009},
+  url          = {https://www.epfl.ch/labs/la/wp-content/uploads/2018/08/Slides28.pdf},
+  urldate      = {2025-12-23}
+}
+
+@online{UCLCalcVar,
+  author    = {{University College London}},
+  title     = {The {Euler-Lagrange} Equation, or {Euler’s} Equation},
+  url       = {https://www.ucl.ac.uk/~ucahmto/latex_html/chapter2_latex2html/node5.html},
+  urldate   = {2025-12-23}
+}
+
+@misc{GordonTibshirani,
+  author       = {Gordon, G. and Tibshirani, R.},
+  title        = {{Karush-Kuhn-Tucker} conditions},
+  howpublished = {PowerPoint slides, School of Comput. Sci., Carnegie Mellon Univ.},
+  url          = {http://www.cs.cmu.edu/~ggordon/10725-F12/slides/},
+  urldate      = {2025-12-23}
+}
+
+@techreport{ColumbiaPMP,
+  author      = {{Columbia University}},
+  title       = {10. {Pontryagin’s} Minimum Principle},
+  institution = {Columbia Univ.},
+  type        = {Lecture Notes},
+  year        = {2018},
+  url         = {https://blogs.cuit.columbia.edu/zp2130/files/2019/03/Lecture10_Pontryagins-Minimum-Principle.pdf},
+  urldate     = {2025-12-23}
+}
+
+@techreport{Waechter2004,
+  author      = {W{\"a}chter, A. and Biegler, L. T.},
+  title       = {On the Implementation of an Interior-Point Filter Line-Search Algorithm for Large-Scale Nonlinear Programming},
+  institution = {Optimization Online},
+  year        = {2004},
+  url         = {https://optimization-online.org/wp-content/uploads/2004/03/836.pdf},
+  urldate     = {2025-12-23}
+}
+
+@online{FAOFireStats2023,
+  author    = {{Food and Agriculture Organization of the United Nations}},
+  title     = {Global Forest Fire Assessment 2023},
+  year      = {2023},
+  url       = {https://www.fao.org/forest-resources-assessment/fire/en/},
+  urldate   = {2026-01-02}
+}
+
+@online{SingularWeb,
+  author    = {{Singular Aircraft S.L.}},
+  title     = {Flyox I -- The World's Largest Civilian {UAV}},
+  url       = {https://singularaircraft.com/},
+  urldate   = {2026-01-02}
 }
 
 @online{astos2024,
-  author = {{ASTOS Solutions GmbH}},
-  title = {ASTOS - Analysis, Simulation and Trajectory Optimization Software},
-  year = {2024},
-  url = {https://www.astos.de/products/astos},
-  urldate = {2026-01-06},
-  note = {Online}
+  author  = {{ASTOS Solutions GmbH}},
+  title   = {{ASTOS} - Analysis, Simulation and Trajectory Optimization Software},
+  year    = {2024},
+  url     = {https://www.astos.de/products/astos},
+  urldate = {2026-01-06}
 }
 
 @inproceedings{rosmann2006,
-  author = {Rösmann, T. and Berning, T. and Werner, R.},
-  title = {Trajectory Simulations, Qualitative Analyses and Differential Flatness of Constrained Systems},
+  author    = {Rösmann, T. and Berning, T. and Werner, R.},
+  title     = {Trajectory Simulations, Qualitative Analyses and Differential Flatness of Constrained Systems},
   booktitle = {AIP Conference Proceedings},
-  year = {2006},
-  volume = {830},
-  number = {1},
-  pages = {522--529},
-  doi = {10.1063/1.2203055},
-  url = {https://pubs.aip.org/aip/acp/article-abstract/830/1/522/998549},
-  note = {Online}
+  year      = {2006},
+  volume    = {830},
+  number    = {1},
+  pages     = {522--529},
+  doi       = {10.1063/1.2203055},
+  url       = {https://pubs.aip.org/aip/acp/article-abstract/830/1/522/998549}
 }
 
 @inproceedings{hargreaves2012,
-  author = {Hargreaves, C. and Paris, S. and Lases, W.},
-  title = {OTIS past, present and future},
+  author    = {Hargreaves, C. and Paris, S. and Lases, W.},
+  title     = {{OTIS} past, present and future},
   booktitle = {AIAA Atmospheric Flight Mechanics Conference},
-  year = {2012},
-  month = {aug},
-  doi = {10.2514/6.1992-4530},
-  url = {https://arc.aiaa.org/doi/10.2514/6.1992-4530},
-  note = {Online}
+  year      = {2012},
+  month     = {aug},
+  doi       = {10.2514/6.2012-4530},
+  url       = {https://arc.aiaa.org/doi/10.2514/6.2012-4530}
 }
 
 @techreport{salguero1995taos,
   author      = {Salguero, David E.},
-  title       = {Trajectory Analysis and Optimization System (TAOS) User's Manual},
+  title       = {Trajectory Analysis and Optimization System ({TAOS}) User's Manual},
   institution = {Sandia National Laboratories},
   address     = {Albuquerque, New Mexico, United States},
   year        = {1995},
   number      = {SAND-95-1652},
   doi         = {10.2172/162896},
   url         = {https://www.osti.gov/biblio/162896},
-  urldate     = {2026-01-06},
-  note        = {Online}
+  urldate     = {2026-01-06}
 }
 
 @online{becerra2010psopt,
-  author = {Becerra, Victor M.},
-  title = {PSOPT – An Open Source Optimal Control Solver for C++},
-  year = {2010},
-  url = {https://www.psopt.net/home},
-  urldate = {2026-01-06},
-  note = {Online}
-}
-
-@article{houska2011acado,
-  author  = {Houska, B. and Ferreau, H. J. and Diehl, M.},
-  title   = {ACADO Toolkit: An Open Source Framework for Automatic Control and Dynamic Optimization},
-  journal = {Optimal Control Applications and Methods},
-  volume  = {32},
-  number  = {3},
-  pages   = {298--312},
-  year    = {2011},
-  doi     = {10.1002/oca.939}
-}
-
-@article{sun2020openap,
-  author  = {Sun, J. and Ellerbroek, J. and Hoekstra, J.},
-  title   = {OpenAP: An Open-source Aircraft Performance Model in Python},
-  journal = {Aerospace},
-  volume  = {7},
-  number  = {8},
-  pages   = {104},
-  year    = {2020},
-  doi     = {10.3390/aerospace7080104},
-  note    = {Reference for the underlying OpenAP framework used by OpenAP.opt}
+  author  = {Becerra, Victor M.},
+  title   = {{PSOPT} – An Open Source Optimal Control Solver for {C}++},
+  year    = {2010},
+  url     = {https://www.psopt.net/home},
+  urldate = {2026-01-06}
 }
 
 @online{msi2024modern,
-  author = {{MSI}},
-  title = {Modern 15 A5SX - Specification},
-  year = {2024},
-  url = {https://es.msi.com/Business-Productivity/Modern-15-A5SX/Specification},
-  urldate = {2026-01-06},
-  note = {Online}
+  author  = {{MSI}},
+  title   = {Modern 15 {A5SX} - Specification},
+  year    = {2024},
+  url     = {https://es.msi.com/Business-Productivity/Modern-15-A5SX/Specification},
+  urldate = {2026-01-06}
 }
 
 @online{apple2024ipad,
-  author = {{Apple Inc.}},
-  title = {iPad Air - Especificaciones técnicas},
-  year = {2024},
-  url = {https://www.apple.com/ipad-air/specs/},
-  urldate = {2026-01-06},
-  note = {Online}
+  author  = {{Apple Inc.}},
+  title   = {{iPad} Air - Especificaciones técnicas},
+  year    = {2024},
+  url     = {https://www.apple.com/ipad-air/specs/},
+  urldate = {2026-01-06}
 }
 
 @online{occc2025mix,
-  author = {{Oficina Catalana del Canvi Climàtic}},
-  title = {Factor de emisión de la energía eléctrica: el mix eléctrico},
-  year = {2025},
+  author       = {{Oficina Catalana del Canvi Climàtic}},
+  title        = {Factor de emisión de la energía eléctrica: el mix eléctrico},
+  year         = {2025},
   organization = {Generalitat de Catalunya},
-  url = {http://canviclimatic.gencat.cat/es/actua/factors_demissio_associats_a_lenergia/},
-  urldate = {2026-01-06},
-  language = {spanish},
-  note = {Online}
+  url          = {http://canviclimatic.gencat.cat/es/actua/factors_demissio_associats_a_lenergia/},
+  urldate      = {2026-01-06},
+  language     = {spanish}
 }
